--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/db_book_storage
-spring.datasource.username=rootUser
+spring.datasource.username=root
 spring.datasource.password=rootUser
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
